0.1.9
* Set unlimited device run & screenshot downloads

0.1.8
* Fix file download for Linux and Mac machines.

0.1.7
* Add pillow to required dependencies
* Fix pillow Image import
* Add print for 'device has no screenshots'
* Set maximum device run limit to 1000
* Fix screenshot download on Windows environments

0.1.6
* Timeout for download request
* Retry feature for screenshot download

0.1.5
* Ability to change the project config

0.1.4
* Add the facility to await (poll) a scheduled test run
* Workaround for the token expiry problem
* Download-on-finish function

0.1.3
* Support additional data zip upload
