@@ -1,4 +1,5 @@
 0.1.9
+* Add feature 'Print available free devices'
 * Set unlimited device run & screenshot downloads
 
 0.1.8
